spade-tests/src/snapshots/spade_tests__parser__extern_unit_must_end_with_semicolon.snap
---
source: spade-tests/src/parser.rs
---
extern entity foo()


error: Unexpected `end of file`, expected body or `;`
  ┌─ testinput:1:20
  │
1 │ extern entity foo()
  │        ------------^ Unexpected end of file
  │        │           
  │        Expected body for this entity
